--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,8 +1,9 @@
-$primary:   #202020;
+$primary: #202020;
 $secondary: #121212;
-$white:     #fff;
+$white: #fff;
+$body: #181818;
 
 $z-index-sidebar: 1000;
-$z-index-header:  1000;
+$z-index-header: 1000;
 
 $sidebar-width: 300px;
