--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,23 +2,24 @@
 @import "vendor/reset";
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    background-color: #181818;
+  background-color: $body;
 
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 1.4rem;
-    color: $white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1.4rem;
+  color: $white;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 
 /* Blocks */
 @import "blocks/page";
@@ -26,11 +27,3 @@ body {
 @import "blocks/sidebar";
 @import "blocks/main";
 @import "blocks/container";
-
-
-
-
-
-
-
-
