--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     {{> head }}
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="page">
-        <!-- Header -->
-        {{> header }}
+      <!-- Header -->
+      {{> header }}
 
-        <!-- Sidebar -->
-        {{> sidebar }}
+      <!-- Sidebar -->
+      {{> sidebar }}
 
-        <!-- Main -->
-        <main class="main">
-            <div class="container">
-                {{> body }}
-            </div>
-        </main>
+      <!-- Main -->
+      <main class="main">
+        <div class="container">{{> body }}</div>
+      </main>
     </div>
-
 
     <!-- JS -->
     <script src="assets/js/app.js"></script>
-</body>
+  </body>
 </html>
