--- a/src/assets/scss/blocks/sidebar.scss
+++ b/src/assets/scss/blocks/sidebar.scss
@@ -1,11 +1,122 @@
 .sidebar {
-    width: $sidebar-width;
-    height: 100vh;
+  width: $sidebar-width;
+  height: 100vh;
 
-    background-color: #ccc;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: $z-index-sidebar;
+  background-color: #202020;
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: $z-index-sidebar;
+  &__container {
+    padding: 0 20px;
+  }
+
+  &__bg {
+    min-height: inherit;
+    width: 100%;
+    min-height: 180px;
+  }
+
+  &__name,
+  &__role {
+    text-align: center;
+  }
+
+  &__name {
+    font-size: 1.8rem;
+    margin-bottom: 3px;
+  }
+
+  &__role {
+    color: #dedede;
+    margin-bottom: 17px;
+  }
+
+  &__description {
+    text-align: center;
+    color: #fff;
+    font-size: 1.2rem;
+  }
+
+  &__row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+  }
+
+  &__btns-row {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
+  &__social-link {
+    height: 25px;
+    width: 25px;
+    min-width: 25px;
+
+    &:hover {
+      scale: 1.2;
+      transition: all 0.2s ease;
+    }
+  }
+}
+
+.avatar-block {
+  position: relative;
+  margin-bottom: 80px;
+  display: flex;
+  justify-content: center;
+
+  &__img {
+    top: -50px;
+    position: absolute;
+    z-index: 100;
+    height: 100px;
+    width: 100px;
+    min-width: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 2px solid $white;
+    box-shadow: 0px 7px 20px 0px #00000040;
+  }
+}
+
+.divider {
+  width: 100%;
+  background-color: #1c1c1c;
+  height: 1px;
+  margin: 30px 0;
+}
+
+.btn {
+  width: 100%;
+  max-width: 120px;
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding: 13px 20px;
+  border-radius: 25px;
+  color: #fff;
+  outline: none;
+  border: none;
+  box-shadow: 0px 7px 17px -10px rgba(242, 63, 63, 0.2);
+  transition: background-color 0.2s ease;
+
+  &__primary {
+    background-color: #3137c9;
+
+    &:hover {
+      background-color: #2529ab;
+    }
+  }
+
+  &__secondary {
+    background-color: #ed3024;
+
+    &:hover {
+      background-color: #cb2d22;
+    }
+  }
 }
