--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -1,3 +1,48 @@
 <aside class="sidebar">
-    Sidebar
+  <img class="sidebar__bg" src="../assets/images/sidebar/bg.png" alt="" />
+  <div class="sidebar__container">
+    <div class="avatar-block">
+      <img
+        class="avatar-block__img"
+        src="../assets/images/sidebar/avatar.png"
+        alt=""
+      />
+    </div>
+    <p class="sidebar__name">Дмитрий Валак</p>
+    <p class="sidebar__role">блог front-end разработчика</p>
+    <div class="sidebar__row">
+      <a href="#">
+        <img
+          class="sidebar__social-link"
+          src="../assets/images/sidebar/instagram.svg"
+          alt="instagram link"
+        />
+      </a>
+      <a href="#">
+        <img
+          class="sidebar__social-link"
+          src="../assets/images/sidebar/vk.svg"
+          alt="instagram link"
+        />
+      </a>
+      <a href="#">
+        <img
+          class="sidebar__social-link"
+          src="../assets/images/sidebar/pinterest.svg"
+          alt="instagram link"
+        />
+      </a>
+    </div>
+    <hr class="divider" />
+    <p class="sidebar__description">
+      Front-end разработчик. Практик верстки сайтов. Созданием сайтов занимаюсь
+      с 2012 года. Работал в нескольких ИТ компаниях и наработал более 10 000
+      часов в создании сайтов различной сложности.
+    </p>
+    <hr class="divider" />
+    <div class="sidebar__btns-row">
+      <button class="btn btn__secondary">Мои работы</button>
+      <button class="btn btn__primary">Написать мне</button>
+    </div>
+  </div>
 </aside>
