--- a/src/assets/scss/blocks/sidebar.scss
+++ b/src/assets/scss/blocks/sidebar.scss
@@ -7,17 +7,39 @@
   left: 0;
   z-index: $z-index-sidebar;
   background-color: #202020;
+  box-shadow: 5px 0px 15px 0px #0505051a;
 
-  &__container {
-    padding: 0 20px;
-  }
-
-  &__bg {
-    min-height: inherit;
-    width: 100%;
+  &__header {
+    position: relative;
     min-height: 180px;
   }
 
+  &__bg {
+    position: absolute;
+    min-height: inherit;
+    object-fit: cover;
+    width: 100%;
+  }
+
+  &__content {
+    padding: 0 2rem;
+  }
+
+  &__divider {
+    border-bottom: 1px solid #1c1c1c;
+    padding-bottom: 3rem;
+    margin-bottom: 3rem;
+  }
+
+  &__bottom {
+    padding: 0 2rem;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+  }
+}
+
+.profile {
   &__name,
   &__role {
     text-align: center;
@@ -25,12 +47,12 @@
 
   &__name {
     font-size: 1.8rem;
-    margin-bottom: 3px;
+    margin-bottom: 0.3rem;
   }
 
   &__role {
     color: #dedede;
-    margin-bottom: 17px;
+    margin-bottom: 1.7rem;
   }
 
   &__description {
@@ -38,24 +60,18 @@
     color: #fff;
     font-size: 1.2rem;
   }
+}
 
-  &__row {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-  }
+.social-links-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
 
-  &__btns-row {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-  }
-
-  &__social-link {
-    height: 25px;
-    width: 25px;
-    min-width: 25px;
+  &__item {
+    height: 2.5rem;
+    width: 2.5rem;
+    min-width: 2.5rem;
 
     &:hover {
       scale: 1.2;
@@ -64,19 +80,19 @@
   }
 }
 
-.avatar-block {
+.avatar {
   position: relative;
-  margin-bottom: 80px;
+  margin-bottom: 8rem;
   display: flex;
   justify-content: center;
 
   &__img {
-    top: -50px;
+    top: -5rem;
     position: absolute;
     z-index: 100;
-    height: 100px;
-    width: 100px;
-    min-width: 100px;
+    height: 10rem;
+    width: 10rem;
+    min-width: 10rem;
     border-radius: 50%;
     overflow: hidden;
     border: 2px solid $white;
@@ -84,20 +100,13 @@
   }
 }
 
-.divider {
-  width: 100%;
-  background-color: #1c1c1c;
-  height: 1px;
-  margin: 30px 0;
-}
-
 .btn {
   width: 100%;
-  max-width: 120px;
+  max-width: 12rem;
   font-size: 1.2rem;
   font-weight: 500;
-  padding: 13px 20px;
-  border-radius: 25px;
+  padding: 1.3rem 2rem;
+  border-radius: 2.5rem;
   color: #fff;
   outline: none;
   border: none;
