--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,8 +1,13 @@
-$primary:   #202020;
+$primary: #202020;
 $secondary: #121212;
-$white:     #fff;
+$white: #fff;
+
+$btn-primary: #3137c9;
+$btn-secondary: #ed3024;
+$btn-primary-dark: #2529ab;
+$btn-secondary-dark: #cb2d22;
 
 $z-index-sidebar: 1000;
-$z-index-header:  1000;
+$z-index-header: 1000;
 
 $sidebar-width: 300px;
