--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,5 +1,7 @@
 @import "vars";
 @import "vendor/reset";
+@import "vendor/mixins";
+@import "vendor/animations.scss";
 
 html {
   font-size: 62.5%;
