--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -1,11 +1,114 @@
 .header {
   width: calc(100% - #{$sidebar-width});
-  height: 30px;
 
-  background-color: #444;
+  background-color: #0d0d0d;
+  box-shadow: 0px 5px 22px 0px #00000040;
 
   position: fixed;
   top: 0;
   right: 0;
   z-index: $z-index-header;
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__list {
+    display: flex;
+    align-items: center;
+  }
+
+  &__nav-item {
+    position: relative;
+
+    &:hover {
+      .sub-nav {
+        animation: FadeIn 0.2s ease;
+        opacity: 1;
+        display: block;
+      }
+
+      .header__nav-link {
+        background-color: $btn-primary;
+
+        &--has-sub-nav {
+          &::after {
+            transform: rotate(180deg);
+          }
+        }
+      }
+    }
+  }
+
+  &__nav-link {
+    @include transition(background-color);
+    display: flex;
+    align-items: center;
+    height: 4rem;
+    padding: 0 1.5rem;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    color: $white;
+    z-index: 1;
+
+    &--has-sub-nav {
+      position: relative;
+      padding-right: 3.5rem;
+
+      &::after {
+        @include transition(transform);
+        content: "";
+        position: absolute;
+        right: 1.5rem;
+        border-style: solid;
+        border-width: 6px 5px 0 5px;
+        border-color: $white transparent transparent transparent;
+      }
+
+      &:hover {
+        &::after {
+          transform: rotate(180deg);
+        }
+      }
+    }
+  }
+}
+
+.sub-nav {
+  opacity: 0;
+  display: none;
+  position: absolute;
+  left: 0;
+  min-width: 16.5rem;
+  box-shadow: 0px 6px 8px 0px #00000033;
+  border-radius: 0px 0px 0.5rem 0.5rem;
+  overflow: hidden;
+
+  &__link {
+    @include transition(background-color);
+    background-color: $btn-primary;
+    display: block;
+    padding: 1rem 1.2rem;
+    color: #fff;
+    font-size: 1.2rem;
+
+    &:hover {
+      background-color: $btn-primary-dark;
+    }
+  }
+}
+
+.search {
+  &__field {
+    min-width: 16rem;
+    width: 21rem;
+    height: 4rem;
+    padding: 0 2rem;
+    background-color: #202020;
+    color: #fff;
+    font-size: 1.2rem;
+    box-shadow: -7px 1px 10px 0px #0000004d;
+  }
 }
