add search, btn blocks

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -30,3 +30,5 @@ body {
 @import "blocks/sidebar";
 @import "blocks/main";
 @import "blocks/container";
+@import "blocks/search";
+@import "blocks/btn";
