--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -53,7 +53,11 @@
     </div>
   </div>
   <div class="sidebar__bottom">
-    <button class="btn btn__secondary">Мои работы</button>
-    <button class="btn btn__primary">Написать мне</button>
+    <button class="btn btn__secondary btn__large btn__rounded">
+      Мои работы
+    </button>
+    <button class="btn btn__primary btn__large btn__rounded">
+      Написать мне
+    </button>
   </div>
 </aside>
