--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -30,5 +30,8 @@ body {
 @import "blocks/sidebar";
 @import "blocks/main";
 @import "blocks/container";
+
+@import "blocks/stories";
+
 @import "blocks/search";
 @import "blocks/btn";
