--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 2rem;
   }
 
   &__list {
@@ -21,6 +22,7 @@
   }
 
   &__nav-item {
+    min-width: fit-content;
     position: relative;
 
     &:hover {
