--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -32,6 +32,7 @@ body {
 @import "blocks/container";
 
 @import "blocks/stories";
+@import "blocks/posts";
 
 @import "blocks/search";
 @import "blocks/btn";
